--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     <h1>💖 15_02_2025 💖</h1>
 
+    <a href="index_1.html">💖 TE AMO 💖 </a>
+
     <div>
         <a class="img">
         <img src="mao1.png" width="10%">
