--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
             cursor: pointer;
             border-radius: 5px;
         }
+
+        footer {
+            position: absolute;
+            bottom: 10px;
+            text-align: center;
+            color: white;
+            font-size: 1.5rem;
+            font-family: Arial, sans-serif;
+            text-shadow: 0 0 5px #fff, 0 0 10px #ff00ff;
+        }
     </style>
 </head>
 <body>
@@ -56,6 +66,7 @@
         <a class="img">
         <img src="mao2.png" width="11%">
         </a>
+        <br><br>
 
     </div>
     <br>
@@ -94,5 +105,14 @@
             document.getElementById("carousel-img").src = images[index];
         }
     </script>
+
+<footer style="text-align: center;">
+    💖 Feito com amor por <strong>Diogo & Erika</strong> 💖
+</footer>
+
+
 </body>
+
+
+
 </html>
